# YorkEngine

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json
dev/: build.ps1  clear_compile.ps1  comp_commands.ps1  configure.ps1  rebuild_run.ps1
include/: App.h  Device.h  FSUtil.h  GameObject.h  Global.h  Logger.h  Model.h  Pipeline.h  Renderer.h  Swapchain.h  Window.h
include/GLFW/: glfw3.h
shaders/src/: basic.frag  basic.vert
src/: App.cpp  Device.cpp  Model.cpp  Pipeline.cpp  Renderer.cpp  Swapchain.cpp  Window.cpp  main.cpp
